--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,4 @@ section { margin-bottom: 1rem; }
 main { padding: 2rem; }
 h2, h3, h4 { margin-top: .5rem; }
 footer { margin-top: 2rem; margin-botttom: 2rem; }
+a { all: inherit; }
