--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,5 @@ ul li, ol li { list-style-type: none; }
 section { margin-bottom: 1rem; }
 main { padding: 2rem; }
 h2, h3, h4 { margin-top: .5rem; }
-footer { margin-top: 2rem; margin-botttom: 2rem; }
+footer { margin-top: 2rem; margin-bottom: 2rem; }
 a { all: inherit; }
