--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,6 @@ ul li, ol li { list-style-type: none; }
 section { margin-bottom: 1rem; }
 main { padding: 2rem; }
 h2, h3, h4 { margin-top: .5rem; }
-footer { margin-top: 2rem; margin-bottom: 2rem; }
-a { all: inherit; }
+footer { margin-top: 2rem; margin-bottom: 2rem; margin-left: 4rem; margin-right: 4rem; }
+a { all: inherit; color: rgb(175, 175, 175) }
+footer a { display: inline; }
